<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.ddns.wpp.lodowkacheck.MainActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_new"
          android:title="@string/action_new"
          android:orderInCategory="1"
          app:showAsAction="never" />
    <item android:id="@+id/action_redonly"
          android:title="@string/action_redonly"
          android:orderInCategory="2"
          android:checkable="true"
          app:showAsAction="never" />
    <item android:id="@+id/action_clear"
          android:title="@string/action_clear"
          android:orderInCategory="3"
          app:showAsAction="never" />
    <item android:id="@+id/action_discard"
          android:title="@string/action_discard"
          android:orderInCategory="4"
          app:showAsAction="never" />
</menu>
